# fp-sem1-lab1

./: .gitignore  README.md  archive-cli.cabal
app/: Main.hs
db/: schema.sql  test_data.sql
src/: Database.hs  Interface.hs  Models.hs  Repo.hs
