cabal-version:      3.4
name:               archive-cli
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Anton
maintainer:         capricavoid7@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable archive-cli
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Database
        Models
        Repo
        Interface

    build-depends:
        base >=4.14 && <4.20,
        text ^>=2.0,
        time ^>=1.12,
        sqlite-simple ^>= 0.4.19,
        directory ^>=1.3

    hs-source-dirs:   app, src
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010